[gd_scene load_steps=15 format=3 uid="uid://d1karoguckmji"]

[ext_resource type="Script" path="res://enemies/guard_alien/guard_alien.gd" id="1_bidwq"]
[ext_resource type="PackedScene" uid="uid://b78fe6gubyukd" path="res://components/state/state_machine.tscn" id="1_m2huh"]
[ext_resource type="Texture2D" uid="uid://cpv6honmno36t" path="res://assets/alien/alien.png" id="1_mf4a8"]
[ext_resource type="Script" path="res://enemies/guard_alien/states/guardShoot.gd" id="2_6evm2"]
[ext_resource type="Script" path="res://enemies/guard_alien/states/guardIdle.gd" id="2_ipr6l"]
[ext_resource type="PackedScene" uid="uid://c5lqshpfbbxpq" path="res://enemies/guard_alien/gun/enemy_gun.tscn" id="3_l4vc4"]
[ext_resource type="Script" path="res://enemies/guard_alien/states/guardAlert.gd" id="3_mg6n0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0iqei"]
size = Vector2(8, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ynq"]
atlas = ExtResource("1_mf4a8")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki056"]
atlas = ExtResource("1_mf4a8")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs8a3"]
atlas = ExtResource("1_mf4a8")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_oq2dd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ynq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki056")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs8a3")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_saiwl"]
radius = 59.0339

[sub_resource type="CircleShape2D" id="CircleShape2D_iqr2c"]
radius = 98.1275

[node name="guard_alien" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_bidwq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_0iqei")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oq2dd")
animation = &"run"
frame_progress = 0.405594

[node name="shooting_range" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="shooting_range"]
shape = SubResource("CircleShape2D_saiwl")

[node name="Detect_area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_area"]
shape = SubResource("CircleShape2D_iqr2c")

[node name="state_machine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("1_m2huh")]
initial_state = NodePath("guardIdle")

[node name="guardIdle" type="Node" parent="state_machine"]
script = ExtResource("2_ipr6l")

[node name="guardAlert" type="Node" parent="state_machine" node_paths=PackedStringArray("navigation", "enemy_parent", "sprite")]
script = ExtResource("3_mg6n0")
navigation = NodePath("../../NavigationAgent2D")
enemy_parent = NodePath("../..")
sprite = NodePath("../../Sprite2D")
spd = 20

[node name="guardShoot" type="Node" parent="state_machine" node_paths=PackedStringArray("gun", "timer")]
script = ExtResource("2_6evm2")
gun = NodePath("../../enemy_gun")
timer = NodePath("../../Timer")

[node name="enemy_gun" parent="." instance=ExtResource("3_l4vc4")]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="shooting_range" to="state_machine/guardAlert" method="_on_shooting_range_body_entered"]
[connection signal="body_exited" from="shooting_range" to="state_machine/guardShoot" method="_on_shooting_range_body_exited"]
[connection signal="body_entered" from="Detect_area" to="state_machine/guardIdle" method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="Detect_area" to="state_machine/guardAlert" method="_on_detect_area_body_exited"]
[connection signal="timeout" from="Timer" to="state_machine/guardShoot" method="_on_timer_timeout"]
